deploy.yaml
---
# Source: k8tz/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8tz
  namespace: k8tz-system
  labels:
    helm.sh/chart: k8tz-0.14.0
    app.kubernetes.io/name: k8tz
    app.kubernetes.io/instance: k8tz
    app.kubernetes.io/version: "0.14.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: https
      protocol: TCP
      name: https
  selector:
    app.kubernetes.io/name: k8tz
    app.kubernetes.io/instance: k8tz
---
# Source: k8tz/templates/controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8tz
  namespace: k8tz-system
  labels:
    helm.sh/chart: k8tz-0.14.0
    app.kubernetes.io/name: k8tz
    app.kubernetes.io/instance: k8tz
    app.kubernetes.io/version: "0.14.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: k8tz
      app.kubernetes.io/instance: k8tz
  template:
    metadata:
      annotations:
        checksum/config: 244b7383794a3ece95021d4286a29d5ba1faaace4ddbfff6a450b32ee994c408
      labels:
        app.kubernetes.io/name: k8tz
        app.kubernetes.io/instance: k8tz
    spec:
      volumes:
      - name: tls
        secret:
          secretName: k8tz-tls
      serviceAccountName: k8tz
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: k8tz
          args:
          - "webhook"
          - "--timezone"
          - "UTC"
          - "--injection-strategy"
          - "initContainer"
          - "--inject=true"
          - "--bootstrap-image"
          - "quay.io/k8tz/k8tz:0.14.0"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          image: "quay.io/k8tz/k8tz:0.14.0"
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: tls
              mountPath: /run/secrets/tls
              readOnly: true
          ports:
            - name: https
              containerPort: 8443
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: https
              scheme: HTTPS
          readinessProbe:
            httpGet:
              path: /health
              port: https
              scheme: HTTPS
          resources:
            {}
---
# Source: k8tz/templates/admission-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: k8tz
  labels:
    helm.sh/chart: k8tz-0.14.0
    app.kubernetes.io/name: k8tz
    app.kubernetes.io/instance: k8tz
    app.kubernetes.io/version: "0.14.0"
    app.kubernetes.io/managed-by: Helm
webhooks:
  - name: admission-controller.k8tz.io
    namespaceSelector:
      matchExpressions:
      - key: kubernetes.io/metadata.name
        operator: NotIn
        values:
        - k8tz-system
        - kube-system
    sideEffects: None
    failurePolicy: Fail
    admissionReviewVersions: ["v1", "v1beta1"]
    clientConfig:
      service:
        name: k8tz
        namespace: k8tz-system
        path: "/"
        port: 443
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURLVENDQWhHZ0F3SUJBZ0lSQUs3Zmt5UlhUL1doUTlia3lXeGltZ1F3RFFZSktvWklodmNOQVFFTEJRQXcKSHpFZE1Cc0dBMVVFQXhNVWF6aDBlaTVyT0hSNkxYTjVjM1JsYlM1emRtTXdIaGNOTWpNeE1ERXlNakF4TnpRMwpXaGNOTXpjeE1ERXlNakF4TnpRM1dqQWZNUjB3R3dZRFZRUURFeFJyT0hSNkxtczRkSG90YzNsemRHVnRMbk4yCll6Q0NBU0l3RFFZSktvWklodmNOQVFFQkJRQURnZ0VQQURDQ0FRb0NnZ0VCQUwwbGZsbUZDSzJsa2tEdyt1b1QKejZjWFE4MktpZG5yL2w5VFFMcElFK2hZUUdMTEF6VW4vdGdXQTJlQzJ4QWRTZnBsSmg0dTlSVU80MEpOaWpvWAorWCtqdnRSMjd6 [...]
    rules:
      - operations: [ "CREATE" ]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
      - operations: [ "CREATE" ]
        apiGroups: ["batch"]
        apiVersions: ["v1"]
        resources: ["cronjobs"]
---
# Source: k8tz/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "k8tz-health-test"
  namespace: k8tz-system
  labels:
    helm.sh/chart: k8tz-0.14.0
    app.kubernetes.io/name: k8tz
    app.kubernetes.io/instance: k8tz
    app.kubernetes.io/version: "0.14.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: curl
      image: curlimages/curl:7.78.0
      args: ['--insecure', 'https://k8tz:443/health']
  restartPolicy: Never
